src/test/deca/syntax/valid/SansObjet/Inst9-Return-Bool.deca
// Description:
//    Return boolean operation.
//
// Results:
//    (void)
//
// Historique:
//    cree le 08/01/2022

{
        return sum == 33;
}
